--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Hernan Amaiz</title>
     <link rel="icon" type="image/png" href="favicon.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Source+Sans+Pro&display=swap" rel="stylesheet">
-    <link href="/estilosP/estilo.css" rel="stylesheet" >
+    <link rel="stylesheet" href="/estiloP/estilo.css">
 </head>
 <body>
     <header class="header">
