--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <div class="container">          
             <div class="menu-btn">
-                <div class="menu-btn__burger"></div>
+                <div class="menu-btn__burger">
                     <ul>
                         <li>
                             <a class="link" href="#portafolio">Portafolio</a>
@@ -24,8 +24,8 @@
                             <a class="link" href="#contacto">Contacto</a>
                         </li>
                     </ul>
-                
-                </div>
+                </div>             
+            </div>
             </div>
     </header>
     <section class="hero">
