--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <div class="container">          
             <div class="menu-btn">
                 <div class="menu-btn__burger">
-                    <ul>
+                    <div id="list"></div>
+                    <!-- <ul>
                         <li>
                             <a class="link" href="#portafolio">Portafolio</a>
                         </li>
@@ -23,7 +24,7 @@
                         <li>
                             <a class="link" href="#contacto">Contacto</a>
                         </li>
-                    </ul>
+                    </ul> -->
                 </div>             
             </div>
             </div>
